# model-viewer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  camera.rs  lib.rs  main.rs
src/model/: loader.rs  mesh.rs  mod.rs  model.rs
src/render/: brdf_lut.wgsl  environment.rs  ibl_convolution.wgsl  mod.rs  pipeline.rs  renderer.rs  shader.wgsl  skybox.wgsl  texture.rs
src/render/passes/: mod.rs  opaque.rs  opaque_transparent.rs  skybox.rs  transparent.rs  two_sided.rs
src/ui/: gui.rs  mod.rs
